--- a/index.html
+++ b/index.html
@@ -197,9 +197,13 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <div class="container-fluid text-center">
+      <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
+      <button class="btn cta-btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i> Download</button>
+      <button class="btn cta-btn btn-lg btn-light" type="button"><i class="fab fa-google-play"></i> Download</button>
+    </div>
+
+
 
   </section>
 
@@ -208,7 +212,16 @@
 
   <footer id="footer">
 
-    <p>© Copyright TinDog</p>
+    <div class="container-fluid text-center">
+      <i class="cta-icon fab fa-twitter"></i>
+      <i class="cta-icon fab fa-facebook-f"></i>
+      <i class="cta-icon fab fa-instagram"></i>
+      <i class="cta-icon fas fa-envelope"></i>
+
+      <p>© Copyright TinDog</p>
+    </div>
+
+
 
   </footer>
 
