--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <i class="cta-icon fab fa-instagram"></i>
       <i class="cta-icon fas fa-envelope"></i>
 
-      <p>© Copyright TinDog</p>
+      <p>© Copyright 2022 TinDog</p>
     </div>
 
 
