--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
     <div class="container-fluid">
 
 
@@ -67,7 +67,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
 
     <div class="container-fluid">
       <div class="row text-center">
@@ -93,7 +93,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials" class="text-center">
+  <section class="colored-section" id="testimonials" class="text-center">
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item container-fluid active">
@@ -121,8 +121,8 @@
 
   <!-- Press -->
 
-  <section id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+  <section class="colored-section" id="press">
+    <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
@@ -132,7 +132,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing" class="text-center">
+  <section class="white-section" id="pricing" class="text-center">
 
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -195,7 +195,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
 
     <div class="container-fluid text-center">
       <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
@@ -210,7 +210,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
 
     <div class="container-fluid text-center">
       <i class="cta-icon fab fa-twitter"></i>
